Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-85119

[REG 5.15] Abort due to failing CHECK when viewing network requests in devtools

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.15.1
    • 5.15.0
    • WebEngine
    • None
    • db62fff781973d8dcb087aa24262ef612b957e61 (qt/qtwebengine/5.15)

      • Open phoronix.com in simplebrowser
      • Open the inspector and go to the network tab
      • Click on a couple of network requests (the topmost one reproduces the issue for me, or just click 5-10 of them randomly)
      • There will be a fatal check failing (even with release builds): [22947:22947:0618/110924.581753:FATAL:render_frame_host_impl.cc(511)] Check failed: policy->CanAccessDataForOrigin( navigation_request->GetRenderFrameHost()>GetProcess()>GetID(), result).

      Seems to work fine with Qt 5.14.

      Stack:

      #0 0x7f09a48f5a6d base::debug::CollectStackTrace()
      #1 0x7f09a46c8ab9 base::debug::StackTrace::StackTrace()
      #2 0x7f09a46c8a70 base::debug::StackTrace::StackTrace()
      #3 0x7f09a47006a2 logging::LogMessage::~LogMessage()
      #4 0x7f09aab0e29a content::(anonymous namespace)::GetOriginForURLLoaderFactory()
      #5 0x7f09aab27475 content::RenderFrameHostImpl::CommitNavigation()
      #6 0x7f09aaa31bb9 content::NavigationRequest::CommitNavigation()
      #7 0x7f09aaa30d79 content::NavigationRequest::OnWillProcessResponseChecksComplete()
      #8 0x7f09aaa346d4 content::NavigationRequest::OnWillProcessResponseProcessed()
      #9 0x7f09aaa337bf content::NavigationRequest::OnNavigationEventProcessed()
      #10 0x7f09aaaff921 content::NavigationThrottleRunner::InformDelegate()
      #11 0x7f09aaaff871 content::NavigationThrottleRunner::ProcessInternal()
      #12 0x7f09aaafecb6 content::NavigationThrottleRunner::ProcessNavigationEvent()
      #13 0x7f09aaa35ce2 content::NavigationRequest::WillProcessResponse()
      #14 0x7f09aaa2dc50 content::NavigationRequest::OnResponseStarted()
      #15 0x7f09aaf690f7 content::NavigationURLLoaderImpl::OnReceiveResponse()
      #16 0x7f09aaf6e834 content::NavigationURLLoaderImpl::URLLoaderRequestController::CallOnReceivedResponse()
      #17 0x7f09aaf6e3bc content::NavigationURLLoaderImpl::URLLoaderRequestController::OnReceiveResponse()
      #18 0x7f09aaf6ee37 content::NavigationURLLoaderImpl::URLLoaderRequestController::OnStartLoadingResponseBody()
      #19 0x7f09a0da6cca blink::ThrottlingURLLoader::OnStartLoadingResponseBody()
      #20 0x7f099f224071 network::mojom::URLLoaderClientStubDispatch::Accept()
      #21 0x7f099edbba01 network::mojom::URLLoaderClientStub<>::Accept()
      #22 0x7f09a57f6de7 mojo::InterfaceEndpointClient::HandleValidatedMessage()
      [...]
      

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            kiburtse Kirill Burtsev
            the compiler Florian Bruhin
            Votes:
            1 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes