FIXUP: Extend url library for WebEngine custom schemes

For some custom schemes (like 'data') origin is supposed to opaque
to not violate security restrictions in renderer. Devtools uses
'data:text/html,...' to display content preview for network requests.

Task-number: QTBUG-85119
Change-Id: Ib180e27571795ee862ff4660799b1939e9ccfb8a
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>